    trigger a bug in the compiler are higher with -O3). Remove -g from cflags,
    as it is automatically added by the glibc scripts.
  * debhelper.in/nscd.init: depends on $remote_fs instead of $local_fs.
    Closes: #464022.
  * patches/any/submitted-ieee754_h.diff: use __BIG_ENDIAN instead of
    BIG_ENDIAN. Closes: #464594.
  * local/manpages/ld.so.8: Add missing options to manpage. Closes: 
    #464395.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 10 Feb 2008 21:23:02 +0100

glibc (2.7-6) unstable; urgency=low

  [ Aurelien Jarno ]
  * patches/localedata/locale-ks_IN.diff: new locale contributed by Rakesh
    Pandit.  Closes: #457351.
  * patches/series: enable patches/any/cvs-vfscanf.diff.  Closes: #453408.
  * Support dpkg-buildpackage -j, but only debian/rules is actually run in
    parallel.
  * patches/any/cvs-iconv-iso2022jp-loop-bug.diff: patch from CVS to fix
    iconv hang when converting to ISO-2022-JP. Thanks to Bryan Donlan for
    the patch.  Closes: #458579.
  * kfreebsd/local-sysdeps.diff: update to revision 2094 (from glibc-bsd).
  * patches/amd64/cvs-vdso_clock_gettime.diff: new patch from CVS to fix
    static linking on amd64.
  * patches/any/local-linuxthreads-fd.diff: new patch to make sure
    linuxthreads doesn't use stdin, stdout or stderr for its internal
    use.
  * debhelper.in/libc.preinst: also check for libc6-xen in non-dpkg-owned
    files test.  Closes: #459523.
  * patches/any/submitted-rfc3484-labels.diff: remove, this patch is actually
    broken, and the observed behaviour conforms with the RFC.
  * patches/any/submitted-fileops-and-signals.diff: disabled as it breaks too
    much programs.  Closes: #459643.
  * patches/localedata/locale-pt_PT.diff: new patch from Flávio Martins to
    fix mon_decimal_point for pt_PT.  Closes: #459217.
  * debian/debhelper.in/locales.postinst: don't update /etc/default/locale
    if it already exists and DEBCONF_RECONFIGURE is not empty.  Closes:
    #458914.