@@ -1,0 +1,1 @@
+build-tree/locales-all/supported.tar.lzma usr/lib/locales-all
