@@ -29,10 +29,12 @@ glibc (2.7-7) unstable; urgency=low
     Closes: #464022.
   * patches/any/submitted-ieee754_h.diff: use __BIG_ENDIAN instead of
     BIG_ENDIAN. Closes: #464594.
-  * local/manpages/ld.so.8: Add missing options to manpage. Closes: 
+  * local/manpages/ld.so.8: Add missing options to manpage. Closes:
     #464395.
+  * rules.d/build.mk: build the locales in the build target instead of the
+    install one to workaround a bug in fakeroot.  Closes: #464924.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 10 Feb 2008 21:23:02 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 10 Feb 2008 21:43:01 +0100
 
 glibc (2.7-6) unstable; urgency=low
 
